# glyph

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  SPEC-speaker-labels.md  SPEC.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.claude/: settings.json
design/: mockup.html
scripts/: rebuild-install.sh
sidecar/: audiocap.entitlements  build-and-install.sh
sidecar/audiocap/: Package.swift
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/binaries/: audiocap-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: commands.rs  credentials.rs  events.rs  keychain.rs  main.rs
src-tauri/src/asana/: mod.rs
src-tauri/src/audio/: mod.rs  wav.rs
src-tauri/src/calendar/: mod.rs
src-tauri/src/gmail/: mod.rs
src-tauri/src/notes/: mod.rs
src-tauri/src/store/: mod.rs  notes_cmds.rs
src-tauri/src/stt/: mod.rs
src-tauri/src/whisper/: mod.rs
src/components/: ActionItems.tsx  AddActionItem.tsx  AsanaModal.tsx  Brand.tsx  CalendarEventRow.tsx  Credentials.tsx  EmailModal.tsx  EmptyState.tsx  Icons.tsx  MeetingCard.tsx  MeetingStartingPrompt.tsx  NoteRow.tsx  NotesList.tsx  NotesView.tsx  Onboarding.tsx  PageHeader.tsx  RecordButton.tsx  RecordingBar.tsx  Sidebar.tsx  Transcript.tsx  ui.tsx
src/core/: AudioSource.ts  CalendarSource.ts  NoteGenerator.ts  NotesStore.ts  TaskExporter.ts  Transcriber.ts  index.ts
src/lib/: avatar.ts  datetime.ts  ipc.ts  (+15 more)
(+13 files in other folders)
