[package]
name = "glyph"
version = "0.0.0"
description = "Glyph — desktop-first macOS meeting notetaker"
authors = ["OltaFlock AI"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = { version = "3", features = ["apple-native"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["sync", "rt", "macros"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
sha2 = "0.10"
getrandom = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
whisper-rs = { version = "0.14", features = ["metal"] }

[features]
# Tauri v2: custom-protocol is enabled for release builds by the CLI.
custom-protocol = ["tauri/custom-protocol"]
